2008-04-23  Stefan Monnier  <monnier@iro.umontreal.ca>

	* minibuffer.el (completion-try-completion): Add `point' argument.
	Change return value.
	(completion-all-completions): Add `point' argument.
	(minibuffer-completion-help): Pass the new `point' argument.
	(completion--do-completion): Pass the whole field to try-completion.
	(completion--try-word-completion): Rewrite, making fewer assumptions.
	(completion-emacs21-try-completion, completion-emacs21-all-completions)
	(completion-emacs22-try-completion, completion-emacs22-all-completions)
	(completion-basic-try-completion, completion-basic-all-completions):
	New functions.
	(completion-styles-alist): Use them.

2008-04-23  Agustin Martin  <agustin.martin@hispalinux.es>

	* ispell.el (ispell-set-spellchecker-params): New function to make sure
	right params and dictionary alists are used after spellchecker changes.
	(ispell-aspell-dictionary-alist, ispell-last-program-name)
	(ispell-initialize-spellchecker-hook): New variables and hook.
	(ispell-find-aspell-dictionaries): Use ispell-aspell-dictionary-alist.
	(ispell-maybe-find-aspell-dictionaries): Remove.
	Calls replaced by (ispell-set-spellchecker-params) calls.
	(ispell-have-aspell-dictionaries): Remove.
	* flyspell.el: Replace ispell-maybe-find-aspell-dictionaries by
	ispell-set-spellchecker-params.

2008-04-23  Stefan Monnier  <monnier@iro.umontreal.ca>

	* complete.el (PC-do-completion): Be more robust in the presence of
	unexpected values in minibuffer-completion-predicate.

	* minibuffer.el (read-file-name): Don't let-bind default-directory.
	Only abbreviate default-filename if it's a file.

	* minibuffer.el (read-file-name-function, read-file-name-predicate)
	(read-file-name-completion-ignore-case, insert-default-directory):
	New vars, moved from fileio.c.
	(read-file-name): New fun, moved from fileio.c.
	* cus-start.el: Remove insert-default-directory and
	read-file-name-completion-ignore-case.

	* Makefile.in (emacs-deps): Leave it empty.
